--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <p>Découvrez des restaurants d'exception, <br>
                 sélectionnés par nos soins</p>
             <button><span class="search-text"><bold>Explorer nos restaurants</bold></span>
-                </button>    
+                </button>
+                <div class="gradient">
+                    
+                </div>    
         </div>
         <div class="fonction">
             <h2>Fonctionnement</h2>
